--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
             <ul class="nav-links">
                 <li><a href="#">notes</a></li> 
                 <li><a href="#">blog</a></li>
-                <li><a href="#">are.na  ↗</a></li>
-                <li><a href="#">cv  ↗</a></li>
-                <li><a href="#">linkedin  ↗</a></li>
-                <li><a href="#">mastodon ↗</a></li>
-                <li><a href="#">instagram ↗</a></li>
+                <li><a href="https://www.are.na/aimee-burnett/index">are.na  ↗</a></li>
+                <li><a href="https://docs.google.com/spreadsheets/d/1C5nRAxzsj3G2bIIAPdTX0HcoTEXaT1sTNpi1-sJURx4/edit?usp=sharing">cv  ↗</a></li>
+                <li><a href="https://www.linkedin.com/in/aimee-burnett-97b89868/">linkedin  ↗</a></li>
+                <li><a href="https://x.com/AimeeBurne44944">twitter ↗</a></li>
+                 <!--<li><a href="#">farcaster ↗</a></li>-->
+                <li><a href="https://www.instagram.com/babesjubilee/">instagram ↗</a></li>
             </ul>
         </nav>
 
@@ -37,29 +38,29 @@
                 <p>I'm a consultant, designer, writer, and host.</p><br><br><br>
                 <h2>for work</h2>
                 <br>
-                <p>Currently working at Accenture where I focus on realizing the value of new technologies for products & energy clients.<br><br>
+                <p>Currently working at <a href="https://www.accenture.com/us-en/services/emerging-technology">Accenture</a> where I focus on realizing the value of emerging technologies like AI in product & energy industries.<br><br>
                 <p><span class="italic">Previously:</span></p>
                 <ul>
-                    <li>Researcher at MIT Media Lab & OCAD Visual Analytics Lab</li>
-                    <li>Founder of Casino & Pedlar Stock</li>
-                    <li>Designer at Studio Miessen</li>
+                    <li>Researcher at <a href="https://www.media.mit.edu/about/overview/">MIT Media Lab</a> & <a href="https://research.ocaduwebspace.ca/research/val/home.html">OCADU Visual Analytics Lab</a></li>
+                    <li>Founder of <a href="https://www.are.na/aimee-burnett/casino-artspace">Casino Artspace</a> & <a href="https://www.are.na/aimee-burnett/pedlar-stock-shoemaking">Pedlar Stock Shoemaking Company</a></li>
+                    <li>Designer at <a href="https://studiomiessen.com/">Studio Miessen</a></li>
                     <li>Growth Marketing for Fortune 500 clients</li>
-                    <li>Civic Incubator Project Manager at Future Cities Canada</li>
+                    <li><a href="https://communityfoundations.ca/future-cities-canada-new-initiative-aims-to-accelerate-inclusive-innovation-in-cities/">Civic Incubator</a> Project Manager at Future Cities Canada</li>
 
                 </ul>
                 <br>
-                <p>My work has been featured at WEF in Davos, Rutgers School of Management & Labor Relations' Kelso Fellows, Metagov, and more.</p>
+                <p>My work has been featured at <a href="https://www.accenture.com/us-en/about/events/world-economic-forum">WEF</a> in Davos, Rutgers School of Management & Labor Relations' <a href="https://smlr.rutgers.edu/faculty-research-engagement/institute-study-employee-ownership-and-profit-sharing/mid-year-fellows">Kelso Fellows</a>, <a href="https://metagov.org/seminar">Metagov</a> and more.</p>
             </section>
 
             <section id="currently">
                 <h2>for fun</h2>
                 <br>
                 <ul>
-                    <li>Writing about the future of knowledge work</li>
+                    <li>Writing about the <a href="https://guidetomarket.substack.com/">future of knowledge work</a></li>
                     <li>Curating open knowledge bases in Obsidian & a physical reference library</li>
-                    <li>Designing experiences & traditions through collective production like wine, pizza, saunas</li>
+                    <li>Designing experiences & traditions through collective production like <a href="https://www.are.na/aimee-burnett/making-wine">winemaking,</a> <a href="https://www.are.na/aimee-burnett/pizza-club">pizza supper club</a>, community saunas</li>
                     <li>Running an accountability meetup called 'Unfinished Business'</li>
-                    <li>Learning financial modelling, data science, and automation engineering</li>
+                    <li>Learning financial modelling, data science, and automation engineering on my <a href="#">learning roadmap</a></li>
                 </ul>
             </section>
 
