image and link updates. new bio.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
         <nav class="sidebar">
             <ul class="nav-links">
-                <li><a href="#">notes</a></li> 
+                <li><a href="http://notes.aimee.onl/">notes</a></li> 
                 <li><a href="#">blog</a></li>
                 <li><a href="https://www.are.na/aimee-burnett/index">are.na  ↗</a></li>
                 <li><a href="https://docs.google.com/spreadsheets/d/1C5nRAxzsj3G2bIIAPdTX0HcoTEXaT1sTNpi1-sJURx4/edit?usp=sharing">cv  ↗</a></li>
@@ -31,21 +31,21 @@
 
         <main class="content">
             <div class="hero-image">
-                <img src="assets/media/image.png" alt="">
+                <img src="assets/media/belleIsle.jpg" alt="">
             </div>
 
             <section id="intro">
-                <p>I'm a consultant, designer, writer, and host.</p><br><br><br>
+                <p>I'm an emerging technology consultant, writer, host, and former designer.</p><br><br><br>
                 <h2>for work</h2>
                 <br>
                 <p>Currently working at <a href="https://www.accenture.com/us-en/services/emerging-technology">Accenture</a> where I focus on realizing the value of emerging technologies like AI in product & energy industries.<br><br>
                 <p><span class="italic">Previously:</span></p>
                 <ul>
-                    <li>Researcher at <a href="https://www.media.mit.edu/about/overview/">MIT Media Lab</a> & <a href="https://research.ocaduwebspace.ca/research/val/home.html">OCADU Visual Analytics Lab</a></li>
+                    <li>Graduate Researcher at <a href="https://www.media.mit.edu/about/overview/">MIT Media Lab</a> & <a href="https://research.ocaduwebspace.ca/research/val/home.html">OCADU Visual Analytics Lab</a></li>
+                    <li>Growth Marketing Strategist for Consumer Goods/Services & Hospitality Clients</li>
                     <li>Founder of <a href="https://www.are.na/aimee-burnett/casino-artspace">Casino Artspace</a> & <a href="https://www.are.na/aimee-burnett/pedlar-stock-shoemaking">Pedlar Stock Shoemaking Company</a></li>
-                    <li>Designer at <a href="https://studiomiessen.com/">Studio Miessen</a></li>
-                    <li>Growth Marketing for Fortune 500 clients</li>
-                    <li><a href="https://communityfoundations.ca/future-cities-canada-new-initiative-aims-to-accelerate-inclusive-innovation-in-cities/">Civic Incubator</a> Project Manager at Future Cities Canada</li>
+                    <li>Designer & Researcher at <a href="https://studiomiessen.com/">Studio Miessen</a></li>
+                    <li>Operations Manager for the <a href="https://communityfoundations.ca/future-cities-canada-new-initiative-aims-to-accelerate-inclusive-innovation-in-cities/">Incubator Program</a> at Future Cities Canada</li>
 
                 </ul>
                 <br>
@@ -55,13 +55,10 @@
             <section id="currently">
                 <h2>for fun</h2>
                 <br>
-                <ul>
-                    <li>Writing about the <a href="https://guidetomarket.substack.com/">future of knowledge work</a></li>
-                    <li>Curating open knowledge bases in Obsidian & a physical reference library</li>
-                    <li>Designing experiences & traditions through collective production like <a href="https://www.are.na/aimee-burnett/making-wine">winemaking,</a> <a href="https://www.are.na/aimee-burnett/pizza-club">pizza supper club</a>, community saunas</li>
-                    <li>Running an accountability meetup called 'Unfinished Business'</li>
-                    <li>Learning financial modelling, data science, and automation engineering on my <a href="#">learning roadmap</a></li>
-                </ul>
+                <p>I enjoy building personal information systems, and exploring ownership as it relates to both community building and the future of labour. 
+                    <br> <br>I actively learn about these concepts through <a href="http://notes.aimee.onl/">open-source notes</a> (inspired by <a href="https://notes.nicolevanderhoeven.com/Fork+My+Brain">Nicole van der Hoeven's 'Fork my Brain'</a>), <a href="http://blog.aimee.onl/">writing</a>, library-building, and conducting experiments. 
+                    These experiments have included the creation of production-focused cultures through <a href="https://www.are.na/aimee-burnett/making-wine">winemaking</a>, <a href="https://www.are.na/aimee-burnett/pizza-club">pizza supper clubs</a>, an <a href="https://www.are.na/aimee-burnett/art-lotto">art lottery</a>, and shared spaces like <a href="https://www.are.na/aimee-burnett/casino-artspace">this one</a>, and <a href="https://www.are.na/aimee-burnett/5-o-clock-shop">this one</a>, or owned spaces <a href="https://www.are.na/aimee-burnett/beach-house-mv2vlsxkpw0">like this one</a>. 
+                    <br> <br>Here's a link to my learning roadmap.</p>
             </section>
 
         </main>
