--- a/index.html
+++ b/index.html
@@ -35,21 +35,19 @@
             </div>
 
             <section id="intro">
-                <p>I'm an emerging technology consultant, writer, host, and former designer.</p><br><br><br>
-                <h2>for work</h2>
+                <p>Narrative. Systems. Experimentation. Futures of Energy & Agency.</p><br><br><br>
+                <h2>about</h2>
                 <br>
-                <p>Currently working at <a href="https://www.accenture.com/us-en/services/emerging-technology">Accenture</a> where I focus on realizing the value of emerging technologies like AI in product & energy industries.<br><br>
-                <p><span class="italic">Previously:</span></p>
+                <p>I help people and organizations answer the question 'what's worth doing next,' and build the quiet infrastructure that powers it.</p><br><br>
+                <p>My work spans research & design, consulting, and delivery — orienting and acting amid complexity by clarifying what matters, designing systems around it, delivering prototypes, and scaling solutions.</p><br><br>
+                <p><span class="italic">My focus is infrastructure at three scales:</span></p>
                 <ul>
-                    <li>Graduate Researcher at <a href="https://www.media.mit.edu/about/overview/">MIT Media Lab</a> & <a href="https://research.ocaduwebspace.ca/research/val/home.html">OCADU Visual Analytics Lab</a></li>
-                    <li>Growth Marketing Strategist for Consumer Goods/Services & Hospitality Clients</li>
-                    <li>Founder of <a href="https://www.are.na/aimee-burnett/casino-artspace">Casino Artspace</a> & <a href="https://www.are.na/aimee-burnett/pedlar-stock-shoemaking">Pedlar Stock Shoemaking Company</a></li>
-                    <li>Designer & Researcher at <a href="https://studiomiessen.com/">Studio Miessen</a></li>
-                    <li>Operations Manager for the <a href="https://communityfoundations.ca/future-cities-canada-new-initiative-aims-to-accelerate-inclusive-innovation-in-cities/">Incubator Program</a> at Future Cities Canada</li>
-
+                    <li><b>Personal</b> — Knowledge / information systems and tools for rich, self-directed lives</li>
+                    <li><b>Cultural</b> — Community-owned assets and informal institutions</li>
+                    <li><b>Energy</b> — Tech-led growth / innovation programs for energy and software companies</li>
                 </ul>
                 <br>
-                <p>My work has been featured at <a href="https://www.accenture.com/us-en/about/events/world-economic-forum">WEF</a> in Davos, Rutgers School of Management & Labor Relations' <a href="https://smlr.rutgers.edu/faculty-research-engagement/institute-study-employee-ownership-and-profit-sharing/mid-year-fellows">Kelso Fellows</a>, <a href="https://metagov.org/seminar">Metagov</a> and more.</p>
+                <p>These converge at a critical edge:<br>AI, electrification, and individual sovereignty** where people are rethinking how they live, work, and build.</p>
             </section>
 
             <section id="currently">
