--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
             <section id="intro">
                 <p>Narrative. Systems. Experimentation. Futures of Energy & Agency.</p><br><br><br>
-                <h2>about</h2>
+                <h2>focus</h2>
                 <br>
-                <p>I help people and organizations answer the question 'what's worth doing next,' and build the quiet infrastructure that powers it.</p><br><br>
-                <p>My work spans research & design, consulting, and delivery — orienting and acting amid complexity by clarifying what matters, designing systems around it, delivering prototypes, and scaling solutions.</p><br><br>
+                <p>I help people and organizations answer the question 'what's worth doing next,' and build the quiet infrastructure that powers it.</p><br>
+                <p>My work spans research & design, consulting, and delivery — orienting and acting amid complexity by clarifying what matters, designing systems around it, delivering prototypes, and scaling solutions.</p><br>
                 <p><span class="italic">My focus is infrastructure at three scales:</span></p>
                 <ul>
                     <li><b>Personal</b> — Knowledge / information systems and tools for rich, self-directed lives</li>
@@ -47,16 +47,13 @@
                     <li><b>Energy</b> — Tech-led growth / innovation programs for energy and software companies</li>
                 </ul>
                 <br>
-                <p>These converge at a critical edge:<br>AI, electrification, and individual sovereignty** where people are rethinking how they live, work, and build.</p>
+                <p>These converge at a critical edge: AI, electrification, and individual sovereignty where people are rethinking how they live, work, and build.</p>
             </section>
 
             <section id="currently">
-                <h2>for fun</h2>
+                <h2>projects</h2>
                 <br>
-                <p>I enjoy building personal information systems, and exploring ownership as it relates to both community building and the future of labour. 
-                    <br> <br>I actively learn about these concepts through <a href="http://notes.aimee.onl/">open-source notes</a> (inspired by <a href="https://notes.nicolevanderhoeven.com/Fork+My+Brain">Nicole van der Hoeven's 'Fork my Brain'</a>), <a href="http://blog.aimee.onl/">writing</a>, library-building, and conducting experiments. 
-                    These experiments have included the creation of production-focused cultures through <a href="https://www.are.na/aimee-burnett/making-wine">winemaking</a>, <a href="https://www.are.na/aimee-burnett/pizza-club">pizza supper clubs</a>, an <a href="https://www.are.na/aimee-burnett/art-lotto">art lottery</a>, and shared spaces like <a href="https://www.are.na/aimee-burnett/casino-artspace">this one</a>, and <a href="https://www.are.na/aimee-burnett/5-o-clock-shop">this one</a>, or owned spaces <a href="https://www.are.na/aimee-burnett/beach-house-mv2vlsxkpw0">like this one</a>. 
-                    <br> <br>Here's a link to my learning roadmap.</p>
+                <p>coming soon</p>
             </section>
 
         </main>
