--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <section id="intro">
-                <p>Narrative. Systems. Experimentation. Futures of Energy & Agency.</p><br><br><br>
+                <p>Narrative. Systems. Experimentation.<br>Futures of Energy & Agency.</p><br><br><br>
                 <h2>focus</h2>
                 <br>
                 <p>I help people and organizations answer the question 'what's worth doing next,' and build the quiet infrastructure that powers it.</p><br>
