--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <section id="intro">
-                <p>Narrative. Systems. Experimentation.<br>Futures of Energy & Agency.</p><br><br><br>
+                <p>Narrative. Systems. Experimentation.<br>Futures of Energy & Agency.<br><br>Currently working on <a href="https://www.accenture.com/us-en/insights/consulting/making-reinvention-real-with-gen-ai">AI for utilities</a> @ <a href="https://www.accenture.com/us-en/services/emerging-technology">Accenture</a></p><br><br><br>
                 <h2>focus</h2>
                 <br>
                 <p>I help people and organizations answer the question 'what's worth doing next,' and build the quiet infrastructure that powers it.</p><br>
